# graphql-rust-test

./: .gitignore  Cargo.toml
.circleci/: config.yml
.scripts/: codecov.sh
src/: handlers.rs  main.rs  schema.rs
