[package]
name = "graphql_rust_test"
version = "0.2.0"
authors = ["Olger Warnier <info@dvic.io>"]
description = "Juniper GraphQL with Actix running a testing interface"
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
actix-web = "1.0.0-alpha.6"
actix-service = "0.3.6"
bytes = "0.4.12"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.11.1"