[package]
name = "graphql_rust_test"
version = "0.2.0"
authors = ["Olger Warnier <olger@spectare.nl>"]
description = "Juniper GraphQL with Actix running a testing interface"
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.14.2"